# minesweeper

./: .clang-format  CMakeLists.txt  main.cpp  tests.cpp
include/: Board.hpp  BoardCoord.hpp  Bomb.hpp  Field.hpp  Minesweeper.hpp
src/: Board.cpp  BoardCoord.cpp  Bomb.cpp  Field.cpp  Minesweeper.cpp
tests/: Minesweeper.test.cpp
utils/: getRndNumber.cpp  isEqualPairs.cpp
